playbooks/argocd/applications/media/plex/ingress.yaml
# playbooks/yaml/argocd-apps/plex/ingress.yaml
# Ingress for Plex
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plex.soyspray.vip
      secretName: prod-cert-tls
  rules:
    - host: plex.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
